trip uid passed through url, corrected overflow error

--- a/assets/css/fullview.css
+++ b/assets/css/fullview.css
@@ -47,6 +47,7 @@
 	margin-right: 20px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	overflow:scroll;
 
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
@@ -126,7 +127,7 @@
 #card-grid .day-card .activity{
 	margin-top: 5px;
 	margin-bottom: 0px;
-	overflow:auto;
+	overflow:scroll;
 	height:180px;
 }
 
