--- a/assets/css/trips.css
+++ b/assets/css/trips.css
@@ -1,3 +1,12 @@
+a:link {
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+
 #trip-heading{
 	padding:10px 0px 10px 0px;
 	text-align:center;
